<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FCFCFC"
    tools:context=".MenuPrivacyPolicy">


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/btnBackPrivMenu"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="4dp"
            app:srcCompat="@drawable/back_btn2" />


    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:fontFamily="@font/poppins_bold"
                android:text="Privacy Policy of GreenBot"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="22dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
                android:text="@string/privacy_policy"
                android:textAppearance="@style/our_mental_"
                app:fontFamily="@font/poppins" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:fontFamily="@font/poppins_bold"
                android:text="What Information We Collect"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="22dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
                android:text="When you use our chatbot for mental health, it may gather certain kinds of data, such as:"
                android:textAppearance="@style/our_mental_"
                app:fontFamily="@font/poppins"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
                android:text="@string/what_info1"
                android:textAppearance="@style/our_mental_"
                app:fontFamily="@font/poppins" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
                android:text="@string/what_info2"
                android:textAppearance="@style/our_mental_"
                app:fontFamily="@font/poppins" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
                android:text="@string/what_info3"
                android:textAppearance="@style/our_mental_"
                app:fontFamily="@font/poppins" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:fontFamily="@font/poppins_bold"
                android:text="How We Use Your Information"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="22dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
                android:text="We use the information we collect from you to:"
                android:textAppearance="@style/our_mental_"
                app:fontFamily="@font/poppins"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
                android:text="@string/how_we_use1"
                android:textAppearance="@style/our_mental_"
                app:fontFamily="@font/poppins" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
                android:text="@string/how_we_use2"
                android:textAppearance="@style/our_mental_"
                app:fontFamily="@font/poppins" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
                android:text="@string/how_we_use3"
                android:textAppearance="@style/our_mental_"
                app:fontFamily="@font/poppins" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:fontFamily="@font/poppins_bold"
                android:text="How We Protect Your Information"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="22dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
                android:text="@string/how_we_protect"
                android:textAppearance="@style/our_mental_"
                app:fontFamily="@font/poppins" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:fontFamily="@font/poppins_bold"
                android:text="Sharing Your Information"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="22dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
                android:text="@string/sharing_info"
                android:textAppearance="@style/our_mental_"
                app:fontFamily="@font/poppins" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:fontFamily="@font/poppins_bold"
                android:text="Contact Us"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="22dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
                android:text="@string/contact_us"
                android:textAppearance="@style/our_mental_"
                app:fontFamily="@font/poppins" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:fontFamily="@font/poppins_bold"
                android:text="Changes to This Privacy Policy"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="22dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
                android:text="@string/changes_to_priv1"
                android:textAppearance="@style/our_mental_"
                app:fontFamily="@font/poppins" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
                android:text="@string/changes_to_priv2"
                android:textAppearance="@style/our_mental_"
                app:fontFamily="@font/poppins" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
                android:text="@string/changes_to_priv3"
                android:textAppearance="@style/our_mental_"
                app:fontFamily="@font/poppins" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
                android:text="@string/changes_to_priv3"
                android:textAppearance="@style/our_mental_"
                android:textColor="@color/white"
                app:fontFamily="@font/poppins" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
                android:text="@string/changes_to_priv3"
                android:textAppearance="@style/our_mental_"
                android:textColor="@color/white"
                app:fontFamily="@font/poppins" />

        </LinearLayout>



    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>